# cause-trace

./: .gitignore  CLAUDE.md  LICENSE  README.md  ci_runner.py  demo.py  evaluation_runner.py  main.py  pyproject.toml  requirements.txt  sensitivity_analysis.py  setup.py
.github/workflows/: causetrace.yml
data/: cases.json
docs/: benchmark_gaps.md  corpus_analysis.md  current_direction.md  v7_validation_plan.md
src/: ci_adapter.py  cli_init.py  explainer.py  git_utils.py  investigation.py  main.py  matcher.py  narrower.py  parser.py
src/signals/: call_site.py  file_overlap.py  line_proximity.py  partial_match.py  scorer.py
tests/: test_call_site_signal.py  test_ci_adapter.py  test_ci_runner.py  test_line_proximity.py  test_matcher.py  test_parser.py  test_validation.py
validation/: target.py
